[project]
name = "Atlas"
version = "1.0.0"
description = "ATLAS AI Sandbox Router - Proper Python Package"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv",
    "uvicorn",
    "google-genai",
    "neo4j",
    "jinja2",
    "aiofiles",
    "python-multipart",
    "marked",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Atlas"]
