[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Atlas"
version = "0.1.0"
description = "Akıllı Yapay Zeka Asistanı Platformu"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "google-genai",
    "neo4j",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "jinja2",
    "aiofiles",
    "google-api-core",
    "pytz",
    "pyyaml",
    "apscheduler",
    "dateparser",
    "numpy",
    "itsdangerous",
    "qdrant-client>=1.7.0,<2.0.0",
    "redis[asyncio]>=5.0.0,<6.0.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy"
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
markers = [
    "integration",
    "slow",
    "unit"
]
